// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDots component renders arbitrary number of dots 1`] = `
<div
  className="page-dots container has-text-centered"
>
  <div
    className="dot selected"
    key="dot0"
  />
  <div
    className="dot"
    key="dot1"
  />
  <div
    className="dot"
    key="dot2"
  />
  <div
    className="dot"
    key="dot3"
  />
  <div
    className="dot"
    key="dot4"
  />
  <div
    className="dot"
    key="dot5"
  />
  <div
    className="dot"
    key="dot6"
  />
  <div
    className="dot"
    key="dot7"
  />
  <div
    className="dot"
    key="dot8"
  />
  <div
    className="dot"
    key="dot9"
  />
</div>
`;

exports[`PageDots component renders the selected dot provided 1`] = `
<div
  className="page-dots container has-text-centered"
>
  <div
    className="dot previous"
    key="dot0"
  />
  <div
    className="dot previous"
    key="dot1"
  />
  <div
    className="dot selected"
    key="dot2"
  />
  <div
    className="dot"
    key="dot3"
  />
</div>
`;

exports[`PageDots component renders without crashing 1`] = `
<div
  className="page-dots container has-text-centered"
>
  <div
    className="dot selected"
    key="dot0"
  />
  <div
    className="dot"
    key="dot1"
  />
  <div
    className="dot"
    key="dot2"
  />
  <div
    className="dot"
    key="dot3"
  />
</div>
`;
